--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   alt=""
                   class="language__img"/>
               </figure>
-              <span class="language__name">HTML</span>
+              <span class="language__name">CSS</span>
             </div>
             <div class="language">
               <figure class="language__img--wrapper">
