--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Jawad Hanif</title>
+    <title>Muhammad Asif</title>
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/c8e4d183c2.js"
@@ -12,7 +12,7 @@
   <body>
     <section id="about-me">
       <nav>
-        <div class="personal__logo">Jawad Hanif</div>
+        <div class="personal__logo">Muhammad Asif</div>
         <ul class="nav__link--list">
           <li class="nav__link">
             <a
@@ -32,7 +32,8 @@
               ">Projects</a>
           </li>
           <li class="nav__link">
-            <a href="mailto:email@email.com" class="nav__link--anchor nav__link--anchor-primary"
+            <!-- mailto:email@email.com -->
+            <a href="#" class="nav__link--anchor nav__link--anchor-primary no-curser"
               >Contact</a>
           </li>
         </ul>
@@ -47,7 +48,7 @@
                 alt="Picture of me"/>
             </figure>
             <h1 class="about-me__info--title">
-              Hey! I'm <span class="text--purple">Jawad Hanif</span>&nbsp;<span class="wave">👋</span>
+              Hey! I'm <span class="text--purple">Muhammad Asif</span>&nbsp;<span class="wave">👋</span>
             </h1>
             <p class="about-me__info--para">
               I'm a
@@ -57,16 +58,16 @@
               the world
             </p>
             <div class="about-me__links">
-              <a href="" class="about-me__link">
+              <a href="#" class="about-me__link no-curser">
                 <i class="fab fa-linkedin-in"></i>
               </a>
-              <a href="" class="about-me__link">
+              <a href="#" class="about-me__link no-curser">
                 <i class="fab fa-github"></i>
               </a>
-              <a href="" class="about-me__link">
+              <a href="#" class="about-me__link no-curser">
                 <i class="far fa-envelope"></i>
               </a>
-              <a href="./assets/Example Resume.pdf" target="_blank" class="about-me__link">
+              <a href="#" class="about-me__link no-curser">
                 <i class="fas fa-file-pdf"></i>
               </a>
             </div>
@@ -99,7 +100,7 @@
             <div class="language">
               <figure class="language__img--wrapper">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png"
                   alt=""
                   class="language__img"/>
               </figure>
@@ -108,56 +109,20 @@
             <div class="language">
               <figure class="language__img--wrapper">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png"
                   alt=""
                   class="language__img"/>
               </figure>
-              <span class="language__name">HTML</span>
+              <span class="language__name">JavaScript</span>
             </div>
             <div class="language">
               <figure class="language__img--wrapper">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
                   alt=""
                   class="language__img"/>
               </figure>
-              <span class="language__name">HTML</span>
-            </div>
-            <div class="language">
-              <figure class="language__img--wrapper">
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
-                  alt=""
-                  class="language__img"/>
-              </figure>
-              <span class="language__name">HTML</span>
-            </div>
-            <div class="language">
-              <figure class="language__img--wrapper">
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
-                  alt=""
-                  class="language__img"/>
-              </figure>
-              <span class="language__name">HTML</span>
-            </div>
-            <div class="language">
-              <figure class="language__img--wrapper">
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
-                  alt=""
-                  class="language__img"/>
-              </figure>
-              <span class="language__name">HTML</span>
-            </div>
-            <div class="language">
-              <figure class="language__img--wrapper">
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
-                  alt=""
-                  class="language__img"/>
-              </figure>
-              <span class="language__name">HTML</span>
+              <span class="language__name">React</span>
             </div>
           </div>
         </div>
@@ -253,7 +218,7 @@
       <div class="row footer__row">
         <a href="#" class="footer__anchor">
           <figure class="footer__logo">
-            <img src="./assets/logo.svg" class="footer__logo--img" alt="">
+            <img src="./assets/logo.png" class="footer__logo--img" alt="">
           </figure>
           <span class="footer__logo--popper">
             Top
@@ -278,7 +243,7 @@
           link__hover-effect
           link__hover-effect--white" target="_blank">Resume</a>
         </div>
-        <div class="footer__copyright">Copyright &copy 2021 Jawad Hanif</div>
+        <div class="footer__copyright">Copyright &copy 2021 Muhammad Asif</div>
       </div>
     </footer>
   </body>
