--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/c8e4d183c2.js"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <section id="about-me">
@@ -82,7 +83,7 @@
       </div>
     </section>
     <section id="languages">
-      <div class="container">
+      <div class="container reveal">
         <div class="row">
           <h1 class="section__title">
             This is my <span class="text--purple">technology stack</span>
@@ -129,7 +130,7 @@
       </div>
     </section>
     <section id="projects">
-      <div class="container">
+      <div class="container reveal">
         <div class="row">
           <h1 class="section__title">
             Here are some of my <span class="text--purple">projects</span>
