--- a/index.html
+++ b/index.html
@@ -230,15 +230,18 @@
           <a href="https://www.google.com" class="
           footer__social--link
           link__hover-effect
-          link__hover-effect--white" target="_blank">GitHub</a>
+          link__hover-effect--white
+          no-curser" target="_blank">GitHub</a>
           <a href="https://www.google.com" class="
           footer__social--link
           link__hover-effect
-          link__hover-effect--white" target="_blank">Linked-In</a>
+          link__hover-effect--white
+          no-curser" target="_blank">Linked-In</a>
           <a href="mailto:email@email.com" class="
           footer__social--link
           link__hover-effect
-          link__hover-effect--white" target="_blank">Email</a>
+          link__hover-effect--white
+          no-curser" target="_blank">Email</a>
           <a href="./assets/Example Resume.pdf" class="
           footer__social--link
           link__hover-effect
