--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
           <a href="./assets/Example Resume.pdf" class="
           footer__social--link
           link__hover-effect
-          link__hover-effect--white" target="_blank">Resume</a>
+          link__hover-effect--white
+          no-curser" target="_blank">Resume</a>
         </div>
         <div class="footer__copyright">Copyright &copy 2021 Muhammad Asif</div>
       </div>
