--- a/index.html
+++ b/index.html
@@ -227,22 +227,23 @@
           </span>
         </a>
         <div class="footer__social--list">
-          <a href="https://www.google.com" class="
+          <a href="#" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
           no-curser" target="_blank">GitHub</a>
-          <a href="https://www.google.com" class="
+          <a href="#" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
           no-curser" target="_blank">Linked-In</a>
-          <a href="mailto:email@email.com" class="
+          <!-- mailto:email@email.com -->
+          <a href="#" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
           no-curser" target="_blank">Email</a>
-          <a href="./assets/Example Resume.pdf" class="
+          <a href="#" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
