--- a/index.html
+++ b/index.html
@@ -231,23 +231,23 @@
           footer__social--link
           link__hover-effect
           link__hover-effect--white
-          no-curser" target="_blank">GitHub</a>
+          no-curser">GitHub</a>
           <a href="#" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
-          no-curser" target="_blank">Linked-In</a>
+          no-curser">Linked-In</a>
           <!-- mailto:email@email.com -->
           <a href="#" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
-          no-curser" target="_blank">Email</a>
+          no-curser">Email</a>
           <a href="#" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
-          no-curser" target="_blank">Resume</a>
+          no-curser">Resume</a>
         </div>
         <div class="footer__copyright">Copyright &copy 2021 Muhammad Asif</div>
       </div>
