--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
               I'm a
               <strong class="text--purple">frontend software</strong> engineer
               with a strong passion for building responsive and performant web
-              applications with great user experience that positively impacts
-              the world
+              applications.
             </p>
             <div class="about-me__links">
               <a href="#" class="about-me__link no-curser">
@@ -138,11 +137,11 @@
           <ul class="project__list">
             <li class="project">
               <div class="project__wrapper">
-                <img src="./assets/loopit.png" class="project__img" alt="" />
+                <img src="./assets/PhotoGram.png" class="project__img" alt="" />
                 <div class="project__description">
-                  <h3 class="project__description--title">Car Sale Project</h3>
+                  <h3 class="project__description--title">Photogram Photo Gallery</h3>
                   <h4 class="project__description--sub-title">
-                    Html, CSS, JavaScript, Vue, Vuex
+                    Html, CSS, JavaScript, React
                   </h4>
                   <p class="project__description--para">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -151,10 +150,10 @@
                     quia fugit ex, eaque quibusdam maiores porro!
                   </p>
                   <div class="project__description--links">
-                    <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
+                    <!-- <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
                       <i class="fab fa-github"></i>
-                    </a>
-                    <a href="https://www.yourwebsite.com" class="project__description--link">
+                    </a> -->
+                    <a href="https://photogram-react.herokuapp.com/" class="project__description--link" target="_blank">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
@@ -163,11 +162,11 @@
             </li>
             <li class="project">
               <div class="project__wrapper">
-                <img src="./assets/loopit.png" class="project__img" alt="" />
+                <img src="./assets/Youtube_clone.png" class="project__img" alt="" />
                 <div class="project__description">
-                  <h3 class="project__description--title">Car Sale Project</h3>
+                  <h3 class="project__description--title">Youtube Clone</h3>
                   <h4 class="project__description--sub-title">
-                    Html, CSS, JavaScript, Vue, Vuex
+                    Html, CSS, JavaScript, React
                   </h4>
                   <p class="project__description--para">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -176,10 +175,10 @@
                     quia fugit ex, eaque quibusdam maiores porro!
                   </p>
                   <div class="project__description--links">
-                    <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
+                    <!-- <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
                       <i class="fab fa-github"></i>
-                    </a>
-                    <a href="https://www.yourwebsite.com" class="project__description--link">
+                    </a> -->
+                    <a href="https://youtube-clone-rt.herokuapp.com/" class="project__description--link" target="_blank">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
@@ -188,11 +187,11 @@
             </li>
             <li class="project">
               <div class="project__wrapper">
-                <img src="./assets/loopit.png" class="project__img" alt="" />
+                <img src="./assets/Tract.png" class="project__img" alt="" />
                 <div class="project__description">
-                  <h3 class="project__description--title">Car Sale Project</h3>
+                  <h3 class="project__description--title">Tract Site 1:1</h3>
                   <h4 class="project__description--sub-title">
-                    Html, CSS, JavaScript, Vue, Vuex
+                    Html, CSS, JavaScript
                   </h4>
                   <p class="project__description--para">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -201,10 +200,10 @@
                     quia fugit ex, eaque quibusdam maiores porro!
                   </p>
                   <div class="project__description--links">
-                    <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
+                    <!-- <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
                       <i class="fab fa-github"></i>
-                    </a>
-                    <a href="https://www.yourwebsite.com" class="project__description--link">
+                    </a> -->
+                    <a href="https://jawadh02.github.io/Treact-1-1/" class="project__description--link" target="_blank">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
