--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
     </section>
     <section id="languages">
-      <div class="container reveal">
+      <div class="container">
         <div class="row">
           <h1 class="section__title">
             This is my <span class="text--purple">technology stack</span>
@@ -129,7 +129,7 @@
       </div>
     </section>
     <section id="projects">
-      <div class="container reveal">
+      <div class="container">
         <div class="row">
           <h1 class="section__title">
             Here are some of my <span class="text--purple">projects</span>
