--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="about-me__info row">
         <div class="about-me__info--container">
           <figure class="about-me__picture--mask">
-            <img src="https://cdn.discordapp.com/attachments/892268229345570847/939912554736676966/EcJoDa1U0AAOXha.png" class="about-me__picture"
+            <img src="./assets/about-me-image.png" class="about-me__picture"
               alt="Picture of me" />
           </figure>
           <h1 class="about-me__info--title">
